--- a/package.json
+++ b/package.json
@@ -6,13 +6,22 @@
     "type": "git",
     "url": "git://github.com/TopDrawer/Web.git"
   },
-  "main": "index.js",
+  "main": null,
   "scripts": {
+    "start": "$(npm bin)/webpack-dev-server --colors --progress --hot --inline --watch-poll"
   },
   "author": "Steve DeWald",
   "license": "UNLICENSED",
   "dependencies": {
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   },
   "devDependencies": {
+    "babel-core": "^6.9.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
