--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-router": "^2.4.1"
+    "react-router": "^2.4.1",
+    "svg-inline-react": "^1.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
@@ -25,6 +26,7 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "style-loader": "^0.13.1",
+    "svg-inline-loader": "^0.4.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
