--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Steve DeWald",
   "license": "UNLICENSED",
   "dependencies": {
+    "classnames": "^2.2.5",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.4.1",
