--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "lost": "^6.8.0",
+    "postcss-css-variables": "^0.5.1",
+    "postcss-cssnext": "^2.5.2",
+    "postcss-import": "^8.1.2",
+    "postcss-loader": "^0.9.1",
     "style-loader": "^0.13.1",
     "svg-inline-loader": "^0.4.1",
     "webpack": "^1.13.1",
